[fix] modal and z-index overlay

--- a/css/main.css
+++ b/css/main.css
@@ -140,8 +140,8 @@ h3 {
             }
 
 /* modal */ 
-
 .overlay {
+    content: "";
     position: fixed;
     z-index: -1;
     opacity: 0;
@@ -150,19 +150,28 @@ h3 {
     height: 100%;
     width: 100%;
     background: black;
-    -webkit-transition: all 0.3s ease;
+/*    -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    -webkit-backface-visibility: hidden;*/
+
 }
 
 .open {
     opacity: 0.6;
     z-index: 1000;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+/*    -webkit-transition: all 0.6s ease;
+    -moz-transition: all 0.6s ease;
+    -o-transition: all 0.6s ease;
+    -ms-transition: all 0.6s ease;
+    transition: all 0.6s ease;
+    -webkit-backface-visibility: hidden;*/
+}
+
+.categoryActive{
+    color: #ffffff;
+    position: relative;
+    z-index: 2000;
 }
